# nokia_test

./: .gitignore  ListDeleter.c  README.md  primeNumbers.c  wordscounter.c
NokiaTest/: CMakeLists.txt  ListDeleter.c  ListDeleter.h  main.c  primeNumbers.c  primeNumbers.h  treeTraceCalc.c  treeTraceCalc.h  types.h  uintOnesGen.c  uintOnesGen.h  wordscounter.c  wordscounter.h
